$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- add 'strict order' to DNS forwarder.  Useful when using Sixxs DNS.  Use Sixxs as
  primary and isp as secondary, Then when tunnel is up, you get google via ipv6.
  see http://www.sixxs.net/tools/dnscache/ , you must have isp or similar dns as
  tunnel won't come up without working dns.
- Allow ipv6 addresses for domain overrides in Dns Forwarder options.
- Add note about using /48's for LAN ip's, typical when using Sixxs.

1.3
---

- fixed DHCP server "deny unknown clients" option with known clients
  without a statically assigned IP address

- fixed a security issue in the DHCP client (CVE-2009-0692)


1.3b18
------

- fix broken IPsec support (missing library)


1.3b17
------

- Convert from BRIDGE to if_bridge. Remove multi-interface bridge check, 
  and checkbox under System > Advanced for filtering bridge since member 
  interfaces will always be filtered. 

- fix a problem with ipnat refusing to create new RDR translation entries
  in the NAT table if a MAP entry exists for the same port, even though that
  check is probably only meant to check for existing RDR entries. This
  fixes issues with SIP communication when there is an inbound NAT
  mapping for port 5060.
  (see also http://marc.info/?l=ipfilter&m=121749272404107&w=2)

- fixed problems when using advanced outbound NAT rules with destination
  matching (non-FTP connections were processed by the ipnat FTP proxy,
  leading to slowness, lost connections, rogue ICMP host unreachable
  messages etc. because ipfilter requires an additional match statement
  on the destination port when using proxies)

- fix DHCP lease page to only show the last lease for a given IP address
  (see dhcpd.leases(5))

- fix for IPv6 pages in user/group manager

- show IPv4 gateway on Status: Interfaces page (was removed inadvertently)
